--- a/docker/portainer/compose.yml
+++ b/docker/portainer/compose.yml
@@ -1,4 +1,3 @@
-version: "3.3"
 services:
   portainer:
     image: portainer/portainer-ce:latest
@@ -7,7 +6,7 @@ services:
       - TZ=Europe/Moscow
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /opt/portainer/portainer_data:/data
+      - ./portainer_data:/data
     ports:
       - "4000:9443"
     restart: always
